[tool.poetry]
name = "kaggle-kickstarter-projects"
version = "0.1.0"
description = ""
authors = ["Yuki Nagae <yuki.nagae1130@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
pandas = "^0.24.2"
pandas-summary = "^0.0.6"
matplotlib = "^3.0"
seaborn = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
